<?xml version="1.0"?>

<package>
  <name>vocabulary_tree</name>
  <version>0.0.0</version>
  <description>
    A generic implementation of the vocabulary tree image retrieval approach of
    Nister and Stewenius. Can be used with any feature and distance metric.
  </description>

  <maintainer email="s.v.d.dries@tue.nl">Patrick Mihelich</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>roscpp</run_depend>

</package>
